Fix assistant cards handling bug